--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,3 +110,20 @@ code{
     justify-content: space-between;
 }
 
+.footer{
+    /* width: 50rem; */
+    bottom: 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.footer h1{
+    font-size: 22px;
+    text-decoration: none;
+}
+
+.footer a{
+    font-size: 20px;
+    /* text-decoration: none; */
+}
