--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,6 +110,39 @@ code{
     justify-content: space-between;
 }
 
+.colorView{
+    background: #fff;
+    width: 350px;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#selectedColorContainer {
+    width: 300px;
+    height: 200px;
+    border: 4px solid #000;
+    border-radius: 10px;
+    /* margin-left: 20px; */
+    /* margin-top: 20px; */
+    background: #1dbbce;
+}
+
+/* #copyHexButton{
+    height: 45px;
+    width: 95px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background: #8a2be2;
+    color: #fff;
+    font-weight: 800;
+    border: none;
+    border-radius: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+} */
+
 .footer{
     /* width: 50rem; */
     bottom: 0;
